- Update application configuration to use reactive web application type. - Replace references to servlet security with reactive security in configuration files. - Modify service methods to return reactive types (Mono) instead of blocking calls. - Adjust logging configuration to use reactive logging. - Update build.gradle to remove servlet dependencies and include reactive dependencies. #deploy-test-dolly-backend #deploy-organisasjon-bestilling-service #deploy-organisasjon-faste-data-service #deploy-organisasjon-forvalter #deploy-organisasjon-mottak-service #deploy-organisasjon-service